--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ pnpm-debug.log*
 .env
 .env.*
 !.env.example
+backend/src/config/serviceAccountKey.json
+
 
 # ===============================
 # Node.js (Backend + Frontend)
