--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "firebase-admin": "^13.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
